[update] bib file

--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -7,7 +7,10 @@
  pages = {329--339},
  title = {Real-Time Audio-to-Score Alignment of Music Performances Containing Errors and Arbitrary Repeats and Skips},
  volume = {24},
- year = {2016}
+ year = {2016},
+ url_Papar = {http://dx.doi.org/10.1109/TASLP.2015.2507862},
+ url_Link = {demo/automatic_accompaniment.html},
+ url_Slides = {}
 }
 
 @article{TNakamura201405JCMSI,
@@ -19,7 +22,8 @@
  pages = {133--140},
  title = {Hierarchical Modeling and Local Stability Analysis for Repressilators Coupled by Quorum Sensing},
  volume = {7},
- year = {2014}
+ year = {2014},
+ url_Paper = {https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article},
 }
 
 @article{ENakamura201404JNMR,
@@ -30,7 +34,8 @@
  pages = {183--201},
  title = {Outer-Product Type Hidden Markov Model and Polyphonic MIDI Score Following},
  volume = {43},
- year = {2014}
+ year = {2014},
+ url_Papar={http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145}
 }
 
 @inproceedings{TNakamura201603ICASSP,
@@ -40,7 +45,8 @@
  month = {Mar.},
  pages = {489--493},
  title = {Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation},
- year = {2016}
+ year = {2016},
+ url_Papar={pdf/paper/Nakamura2016ICASSP03.pdf}
 }
 
 @inproceedings{TNakamura201504ISMIR,
