--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -57,6 +57,7 @@
  pages = {623--628},
  title = {Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Source Separation},
  year = {2014}
+ url_Papar={pdf/paper/TNakamura201504ISMIR.pdf}
 }
 
 @inproceedings{TNakamura201409DAFx,
@@ -66,7 +67,8 @@
  month = {Sep.},
  pages = {129--135},
  title = {Fast Signal Reconstruction from Magnitude Spectrogram of Continuous Wavelet Transform based on Spectrogram Consistency},
- year = {2014}
+ year = {2014},
+ url_Papar={pdf/paper/TNakamura201409DAFx.pdf}
 }
 
 @inproceedings{TNakamura201405ICASSP,
@@ -76,7 +78,8 @@
  month = {May},
  page = {7520--7524},
  title = {Timbre Replacement of Harmonic and Drum Components for Music Audio Signals},
- year = {2014}
+ year = {2014},
+ url_Papar={pdf/paper/TNakamura201405ICASSP.pdf}
 }
 
 @inproceedings{TNakamura201308SMC,
@@ -86,15 +89,18 @@
  month = {Aug.},
  pages = {299--304},
  title = {Acoustic Score Following to Musical Performance with Errors and Arbitrary Repeats and Skips for Automatic Accompaniment},
- year = {2013}
+ year = {2013},
+ url_Papar={pdf/paper/TNakamura201308SMC.pdf}
 }
+
 @inproceedings{TNakamura201109SICEAC,
  author = {Nakamura, Tomohiko and Hara, Shinji and Hori, Yutaka},
  booktitle = {Proceedings of SICE Annual Conference},
  lang = {en},
  month = {Sep.},
  title = {Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks},
- year = {2011}
+ year = {2011},
+ url_Papar={pdf/paper/TNakamura201109SICEAC.pdf}
 }
 
 @inproceedings{THiguchi201409INTERSPEECH,
@@ -104,7 +110,8 @@
  month = {Sep.},
  pages = {850--854},
  title = {A Unified Approach for Underdetermined Blind Signal Separation and Source Activity Detection by Multichannel Factorial Hidden Markov Models},
- year = {2014}
+ year = {2014},
+ url_Papar={pdf/paper/THiguchi201409INTERSPEECH.pdf}
 }
     
 @inproceedings{THiguchi201405ICASSP,
@@ -114,7 +121,8 @@
  month = {May},
  pages = {3215--3219},
  title = {Underdetermined Blind Separation and Tracking of Moving Sources based on DOA-HMM},
- year = {2014}
+ year = {2014},
+ url_Papar={pdf/paper/THiguchi201405ICASSP.pdf}
 }
 
    
@@ -125,7 +133,8 @@
  month = {May},
  title = {Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps},
  volume = {21, 035003},
- year = {2014}
+ year = {2014},
+ url_Papar={pdf/paper/SSagayama201405ASA.pdf}
 }
 
 @inproceedings{MNakano201110WASPAA,
@@ -135,7 +144,8 @@
  month = {Oct.},
  pages = {325--328},
  title = {Bayesian Nonparametric Spectrogram Modeling Based on Infinite Factorial Infinite Hidden Markov Model},
- year = {2011}
+ year = {2011},
+ url_Papar={pdf/paper/MNakano201110WASPAA.pdf}
 }
 
 @article{HKameoka201506IEICEj,
