--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -9,8 +9,7 @@
  volume = {24},
  year = {2016},
  url_Papar = {http://dx.doi.org/10.1109/TASLP.2015.2507862},
- url_Link = {demo/automatic_accompaniment.html},
- url_Slides = {}
+ url_Link = {../../demo/automatic_accompaniment.html}
 }
 
 @article{TNakamura201405JCMSI,
@@ -46,7 +45,7 @@
  pages = {489--493},
  title = {Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation},
  year = {2016},
- url_Papar={pdf/paper/Nakamura2016ICASSP03.pdf}
+ url_Papar={../paper/Nakamura2016ICASSP03.pdf}
 }
 
 @inproceedings{TNakamura201504ISMIR,
@@ -57,7 +56,7 @@
  pages = {623--628},
  title = {Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Source Separation},
  year = {2014}
- url_Papar={pdf/paper/TNakamura201504ISMIR.pdf}
+ url_Papar={../paper/TNakamura201504ISMIR.pdf}
 }
 
 @inproceedings{TNakamura201409DAFx,
@@ -68,7 +67,7 @@
  pages = {129--135},
  title = {Fast Signal Reconstruction from Magnitude Spectrogram of Continuous Wavelet Transform based on Spectrogram Consistency},
  year = {2014},
- url_Papar={pdf/paper/TNakamura201409DAFx.pdf}
+ url_Papar={../paper/TNakamura201409DAFx.pdf}
 }
 
 @inproceedings{TNakamura201405ICASSP,
@@ -79,7 +78,7 @@
  page = {7520--7524},
  title = {Timbre Replacement of Harmonic and Drum Components for Music Audio Signals},
  year = {2014},
- url_Papar={pdf/paper/TNakamura201405ICASSP.pdf}
+ url_Papar={../paper/TNakamura201405ICASSP.pdf}
 }
 
 @inproceedings{TNakamura201308SMC,
@@ -90,7 +89,7 @@
  pages = {299--304},
  title = {Acoustic Score Following to Musical Performance with Errors and Arbitrary Repeats and Skips for Automatic Accompaniment},
  year = {2013},
- url_Papar={pdf/paper/TNakamura201308SMC.pdf}
+ url_Papar={../paper/TNakamura201308SMC.pdf}
 }
 
 @inproceedings{TNakamura201109SICEAC,
@@ -100,7 +99,7 @@
  month = {Sep.},
  title = {Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks},
  year = {2011},
- url_Papar={pdf/paper/TNakamura201109SICEAC.pdf}
+ url_Papar={../paper/TNakamura201109SICEAC.pdf}
 }
 
 @inproceedings{THiguchi201409INTERSPEECH,
@@ -111,7 +110,7 @@
  pages = {850--854},
  title = {A Unified Approach for Underdetermined Blind Signal Separation and Source Activity Detection by Multichannel Factorial Hidden Markov Models},
  year = {2014},
- url_Papar={pdf/paper/THiguchi201409INTERSPEECH.pdf}
+ url_Papar={../paper/THiguchi201409INTERSPEECH.pdf}
 }
     
 @inproceedings{THiguchi201405ICASSP,
@@ -122,7 +121,7 @@
  pages = {3215--3219},
  title = {Underdetermined Blind Separation and Tracking of Moving Sources based on DOA-HMM},
  year = {2014},
- url_Papar={pdf/paper/THiguchi201405ICASSP.pdf}
+ url_Papar={../paper/THiguchi201405ICASSP.pdf}
 }
 
    
@@ -134,7 +133,7 @@
  title = {Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps},
  volume = {21, 035003},
  year = {2014},
- url_Papar={pdf/paper/SSagayama201405ASA.pdf}
+ url_Papar={../paper/SSagayama201405ASA.pdf}
 }
 
 @inproceedings{MNakano201110WASPAA,
@@ -145,10 +144,10 @@
  pages = {325--328},
  title = {Bayesian Nonparametric Spectrogram Modeling Based on Infinite Factorial Infinite Hidden Markov Model},
  year = {2011},
- url_Papar={pdf/paper/MNakano201110WASPAA.pdf}
+ url_Papar={../paper/MNakano201110WASPAA.pdf}
 }
 
-@article{HKameoka201506IEICEj,
+@incollection{HKameoka201506IEICEj,
  author = {{弘和}, {亀岡} and {友彦}, {中村} and {典玄}, {高宗}},
  journal = {電子情報通信学会誌},
  lang = {ja},
