--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -55,7 +55,7 @@
  month = {Oct.},
  pages = {623--628},
  title = {Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Source Separation},
- year = {2014}
+ year = {2014},
  url_Papar={../paper/TNakamura201504ISMIR.pdf}
 }
 
