--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -137,7 +137,7 @@
 }
 
 @inproceedings{MNakano201110WASPAA,
- author = {Nakano, Masahiro and {Le Roux}, Jonathan and Kameoka, Hirokazu, Nakamura, Tomohiko and Ono, Nobutaka and Sagayama, Shigeki},
+ author = {Nakano, Masahiro and {Le Roux}, Jonathan and Kameoka, Hirokazu, and Nakamura, Tomohiko and Ono, Nobutaka and Sagayama, Shigeki},
  booktitle = {Proceedings of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)},
  lang = {en},
  month = {Oct.},
@@ -147,14 +147,11 @@
  url_Papar={../paper/MNakano201110WASPAA.pdf}
 }
 
-@incollection{HKameoka201506IEICEj,
- author = {{弘和}, {亀岡} and {友彦}, {中村} and {典玄}, {高宗}},
- journal = {電子情報通信学会誌},
- lang = {ja},
- month = {Jun.},
- number = {6},
- pages = {467--474},
- title = {音楽音響信号処理技術の最先端},
- volume = {96},
- year = {2015}
+@phdthesis{TNakamura201603PhD,
+  author       = {Nakamura, Tomohiko}, 
+  title        = {Source-Filter Representation and Phase Estimation in Continuous Wavelet Transform Domain for Monaural Music Audio Editing},
+  school       = {The University of Tokyo},
+  year         = 2016,
+  month        = 3,
+  note         = {Dean’s Award, Graduate School of Information Science and Technology, The University of Tokyo}
 }
