--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -9,12 +9,13 @@
  volume = {24},
  year = {2016},
  url_Papar = {http://dx.doi.org/10.1109/TASLP.2015.2507862},
- url_Link = {../../demo/automatic_accompaniment.html}
+ url_Arxiv = {http://arxiv.org/abs/1512.07748},
+ url_Demo = {../../demo/automatic_accompaniment.html}
 }
 
 @article{TNakamura201405JCMSI,
  author = {Nakamura, Tomohiko and Hori, Yutaka and Hara, Shinji},
- journal = {SICE Journal of Control, Measurement, and System Integration (JCMSI)},
+ journal = {SICE Journal of Control, Measurement, and System Integration},
  lang = {en},
  month = {May},
  number = {3},
@@ -23,17 +24,158 @@
  volume = {7},
  year = {2014},
  url_Paper = {https://www.jstage.jst.go.jp/article/jcmsi/7/3/7_133/_article},
+ note={[2015年計測自動制御学会 論文賞 (武田賞)]}
 }
 
 @article{ENakamura201404JNMR,
  author = {Nakamura, Eita and Nakamura, Tomohiko and Saito, Yasuyuki and Ono, Nobutaka and Sagayama, Shigeki},
  issue = {2},
- journal = {Journal of New Music Research (JNMR)},
+ journal = {Journal of New Music Research},
  lang = {en},
  pages = {183--201},
  title = {Outer-Product Type Hidden Markov Model and Polyphonic MIDI Score Following},
  volume = {43},
  year = {2014},
  url_Papar={http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145}
+ url_Arxiv={http://arxiv.org/abs/1404.2313}
 }
 
+@inproceedings{SKozuka202008Internoise,
+  author          = {Kozuka, Shihori and Nakamura, Tomohiko and Saruwatari, Hiroshi},
+  title           = {Investigation on Wavelet Basis Function of DNN-based Time Domain Audio Source Separation Inspired by Multiresolution Analysis},
+  booktitle       = {Proceedings of the 49th International Congress and Exposition on Noise Control Engineering},
+  month           = Aug.,
+  year            = 2020,
+  lang = {en},
+}
+
+@inproceedings{TNakamura202005ICASSP,
+  author          = {Nakamura, Tomohiko and Hiroshi, Saruwatari},
+  title           = {Time-domain Audio Source Separation based on Wave-U-Net Combined with Discrete Wavelet Transform},
+  booktitle       = {Proceedings of the 45th International Conference on Acoustics, Speech, and Signal Processing},
+  pages           = {386--390},
+  month           = May,
+  year            = {2020},
+  url_Paper       = {https://doi.org/10.1109/ICASSP40776.2020.9053934},
+  url_Arxiv       = {https://arxiv.org/abs/2001.10190},
+  lang = {en}
+}
+
+@inproceedings{TNakamura201603ICASSP,
+ author = {Nakamura, Tomohiko and Kameoka, Hirokazu},
+ booktitle = {Proceedings of the 41st IEEE International Conference on Acoustics, Speech and Signal Processing},
+ lang = {en},
+ month = {Mar.},
+ pages = {489--493},
+ title = {Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation},
+ year = {2016},
+ url_Papar={../paper/Nakamura2016ICASSP03.pdf}
+}
+
+@inproceedings{TNakamura201504ISMIR,
+ author = {Nakamura, Tomohiko and Shikata, Kotaro and Takamune, Norihiro and Kameoka, Hirokazu},
+ booktitle = {Proceedings of the 15th International Society for Music Information Retrieval Conference (ISMIR2014)},
+ lang = {en},
+ month = {Oct.},
+ pages = {623--628},
+ title = {Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Source Separation},
+ year = {2014},
+ url_Papar={../paper/TNakamura201504ISMIR.pdf}
+}
+
+@inproceedings{TNakamura201409DAFx,
+ author = {Nakamura, Tomohiko and Kameoka, Hirokazu},
+ booktitle = {Proceedings of the 17th International Conference on Digital Audio Effects (DAFx-14)},
+ lang = {en},
+ month = {Sep.},
+ pages = {129--135},
+ title = {Fast Signal Reconstruction from Magnitude Spectrogram of Continuous Wavelet Transform based on Spectrogram Consistency},
+ year = {2014},
+ url_Papar={../paper/TNakamura201409DAFx.pdf}
+}
+
+@inproceedings{TNakamura201405ICASSP,
+ author = {Nakamura, Tomohiko and Kameoka, Hirokazu and Yoshii, Kazuyoshi and Goto, Masataka},
+ booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP2014)},
+ lang = {en},
+ month = {May},
+ page = {7520--7524},
+ title = {Timbre Replacement of Harmonic and Drum Components for Music Audio Signals},
+ year = {2014},
+ url_Papar={../paper/TNakamura201405ICASSP.pdf}
+}
+
+@inproceedings{TNakamura201308SMC,
+ author = {Nakamura, Tomohiko and Nakamura, Eita and Sagayama, Shigeki},
+ booktitle = {Proceedings of Sound and Music Computing Conference (SMC2013)},
+ lang = {en},
+ month = {Aug.},
+ pages = {299--304},
+ title = {Acoustic Score Following to Musical Performance with Errors and Arbitrary Repeats and Skips for Automatic Accompaniment},
+ year = {2013},
+ url_Papar={../paper/TNakamura201308SMC.pdf}
+}
+
+@inproceedings{TNakamura201109SICEAC,
+ author = {Nakamura, Tomohiko and Hara, Shinji and Hori, Yutaka},
+ booktitle = {Proceedings of SICE Annual Conference},
+ lang = {en},
+ month = {Sep.},
+ title = {Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks},
+ year = {2011},
+ url_Papar={../paper/TNakamura201109SICEAC.pdf}
+}
+
+@inproceedings{THiguchi201409INTERSPEECH,
+ author = {Higuchi, Takuya and Takeda, Hirofumi and Nakamura, Tomohiko and Kameoka, Hirokazu},
+ booktitle = {Proceedings of the 15th Annual Conference of the International Speech Communication Association (Interspeech2014)},
+ lang = {en},
+ month = {Sep.},
+ pages = {850--854},
+ title = {A Unified Approach for Underdetermined Blind Signal Separation and Source Activity Detection by Multichannel Factorial Hidden Markov Models},
+ year = {2014},
+ url_Papar={../paper/THiguchi201409INTERSPEECH.pdf}
+}
+    
+@inproceedings{THiguchi201405ICASSP,
+ author = {Higuchi, Takuya and Takamune, Norihiro and Nakamura, Tomohiko and Kameoka, Hirokazu},
+ booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP2014)},
+ lang = {en},
+ month = {May},
+ pages = {3215--3219},
+ title = {Underdetermined Blind Separation and Tracking of Moving Sources based on DOA-HMM},
+ year = {2014},
+ url_Papar={../paper/THiguchi201405ICASSP.pdf}
+}
+
+   
+@inproceedings{SSagayama201405ASA,
+ author = {Sagayama, Shigeki and Nakamura, Tomohiko and Nakamura, Eita and Saito, Yasuyuki and Kameoka, Hirokazu, and Ono, Nobutaka},
+ booktitle = {Proceedings of Meetings on Acoustics (POMA), Acoustic Society of America (ASA)},
+ lang = {en},
+ month = {May},
+ title = {Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps},
+ volume = {21, 035003},
+ year = {2014},
+ url_Papar={../paper/SSagayama201405ASA.pdf}
+}
+
+@inproceedings{MNakano201110WASPAA,
+ author = {Nakano, Masahiro and {Le Roux}, Jonathan and Kameoka, Hirokazu, and Nakamura, Tomohiko and Ono, Nobutaka and Sagayama, Shigeki},
+ booktitle = {Proceedings of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)},
+ lang = {en},
+ month = Oct.,
+ pages = {325--328},
+ title = {Bayesian Nonparametric Spectrogram Modeling Based on Infinite Factorial Infinite Hidden Markov Model},
+ year = {2011},
+ url_Papar={../paper/MNakano201110WASPAA.pdf}
+}
+
+@phdthesis{TNakamura201603PhD,
+  author       = {Nakamura, Tomohiko}, 
+  title        = {Source-Filter Representation and Phase Estimation in Continuous Wavelet Transform Domain for Monaural Music Audio Editing},
+  school       = {The University of Tokyo},
+  year         = 2016,
+  month        = 3,
+  note         = {Dean’s Award, Graduate School of Information Science and Technology, The University of Tokyo}
+}
