--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -1,3 +1,12 @@
+@article{TNakamura2020IEEEACMTASLP_toappear,
+ author={Nakamura, Tomohiko and Kameoka, Hirokazu},
+ journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+ lang = {en},
+ title = {Harmonic-Temporal Factor Decomposition for Unsupervised Monaural Separation of Harmonic Sounds},
+ year=2020,
+ url_Demo = {demo/key_transposition/index.html}
+}
+
 @article{TNakamura201602IEEEACMTASLP,
  author = {Nakamura, Tomohiko and Nakamura, Eita and Sagayama, Shigeki},
  journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
@@ -10,7 +19,7 @@
  year = {2016},
  url_Papar = {http://dx.doi.org/10.1109/TASLP.2015.2507862},
  url_Arxiv = {http://arxiv.org/abs/1512.07748},
- url_Demo = {../../demo/automatic_accompaniment.html}
+ url_Demo = {demo/automatic_accompaniment.html}
 }
 
 @article{TNakamura201405JCMSI,
@@ -36,7 +45,7 @@
  title = {Outer-Product Type Hidden Markov Model and Polyphonic MIDI Score Following},
  volume = {43},
  year = {2014},
- url_Papar={http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145}
+ url_Papar={http://www.tandfonline.com/doi/full/10.1080/09298215.2014.884145},
  url_Arxiv={http://arxiv.org/abs/1404.2313}
 }
 
@@ -65,7 +74,7 @@
  author = {Nakamura, Tomohiko and Kameoka, Hirokazu},
  booktitle = {Proceedings of the 41st IEEE International Conference on Acoustics, Speech and Signal Processing},
  lang = {en},
- month = {Mar.},
+ month = Mar.,
  pages = {489--493},
  title = {Shifted and Convolutive Source-Filter Non-Negative Matrix Factorization for Monaural Audio Source Separation},
  year = {2016},
@@ -74,63 +83,71 @@
 
 @inproceedings{TNakamura201504ISMIR,
  author = {Nakamura, Tomohiko and Shikata, Kotaro and Takamune, Norihiro and Kameoka, Hirokazu},
- booktitle = {Proceedings of the 15th International Society for Music Information Retrieval Conference (ISMIR2014)},
+ booktitle = {Proceedings of the 15th International Society for Music Information Retrieval Conference},
  lang = {en},
- month = {Oct.},
+ month = Oct.,
  pages = {623--628},
  title = {Harmonic-Temporal Factor Decomposition Incorporating Music Prior Information for Informed Monaural Source Separation},
  year = {2014},
- url_Papar={../paper/TNakamura201504ISMIR.pdf}
+ url_Papar={https://archives.ismir.net/ismir2014/paper/000135.pdf},
+ url_Demo={demo/key_transposition/index.html}
+ note={[Supported by the Tateishi Science and Technology Foundation]},
 }
 
 @inproceedings{TNakamura201409DAFx,
  author = {Nakamura, Tomohiko and Kameoka, Hirokazu},
- booktitle = {Proceedings of the 17th International Conference on Digital Audio Effects (DAFx-14)},
+ booktitle = {Proceedings of the 17th International Conference on Digital Audio Effects},
  lang = {en},
- month = {Sep.},
+ month = Sep.,
  pages = {129--135},
  title = {Fast Signal Reconstruction from Magnitude Spectrogram of Continuous Wavelet Transform based on Spectrogram Consistency},
  year = {2014},
- url_Papar={../paper/TNakamura201409DAFx.pdf}
+ url_Papar={../paper/TNakamura201409DAFx.pdf},
+ url_Demo={demo/fastCWT.html},
+ note={[Supported by the Hara Research Foundation]}
 }
 
 @inproceedings{TNakamura201405ICASSP,
  author = {Nakamura, Tomohiko and Kameoka, Hirokazu and Yoshii, Kazuyoshi and Goto, Masataka},
- booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP2014)},
+ booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing},
  lang = {en},
- month = {May},
+ month = May,
  page = {7520--7524},
  title = {Timbre Replacement of Harmonic and Drum Components for Music Audio Signals},
  year = {2014},
- url_Papar={../paper/TNakamura201405ICASSP.pdf}
+ url_Papar={../paper/TNakamura201405ICASSP.pdf},
+ url_Demo={demo/TimbreReplacer.html}
 }
 
 @inproceedings{TNakamura201308SMC,
  author = {Nakamura, Tomohiko and Nakamura, Eita and Sagayama, Shigeki},
- booktitle = {Proceedings of Sound and Music Computing Conference (SMC2013)},
+ booktitle = {Proceedings of Sound and Music Computing Conference},
  lang = {en},
- month = {Aug.},
+ month = Aug.,
  pages = {299--304},
  title = {Acoustic Score Following to Musical Performance with Errors and Arbitrary Repeats and Skips for Automatic Accompaniment},
  year = {2013},
- url_Papar={../paper/TNakamura201308SMC.pdf}
+ url_Papar={http://smcnetwork.org/node/1754},
+ url_Demo={demo/automatic_accompaniment.html},
+ note={[Supported by the Telecommunications Advancement Foundation]}
 }
 
 @inproceedings{TNakamura201109SICEAC,
  author = {Nakamura, Tomohiko and Hara, Shinji and Hori, Yutaka},
  booktitle = {Proceedings of SICE Annual Conference},
  lang = {en},
- month = {Sep.},
+ month = Sep.,
  title = {Local Stability Analysis for a class of Quorum-Sensing Networks with Cyclic Gene Regulatory Networks},
  year = {2011},
- url_Papar={../paper/TNakamura201109SICEAC.pdf}
+ url_Papar={http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6060320},
+ note={[SICE Annual Conference 2011 International Award and Finalist of Young Author's Award]}
 }
 
 @inproceedings{THiguchi201409INTERSPEECH,
  author = {Higuchi, Takuya and Takeda, Hirofumi and Nakamura, Tomohiko and Kameoka, Hirokazu},
- booktitle = {Proceedings of the 15th Annual Conference of the International Speech Communication Association (Interspeech2014)},
+ booktitle = {Proceedings of the 15th Annual Conference of the International Speech Communication Association},
  lang = {en},
- month = {Sep.},
+ month = Sep.,
  pages = {850--854},
  title = {A Unified Approach for Underdetermined Blind Signal Separation and Source Activity Detection by Multichannel Factorial Hidden Markov Models},
  year = {2014},
@@ -139,21 +156,20 @@
     
 @inproceedings{THiguchi201405ICASSP,
  author = {Higuchi, Takuya and Takamune, Norihiro and Nakamura, Tomohiko and Kameoka, Hirokazu},
- booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP2014)},
+ booktitle = {Proceedings of 2014 IEEE International Conference on Acoustics, Speech and Signal Processing},
  lang = {en},
- month = {May},
+ month = May,
  pages = {3215--3219},
  title = {Underdetermined Blind Separation and Tracking of Moving Sources based on DOA-HMM},
  year = {2014},
  url_Papar={../paper/THiguchi201405ICASSP.pdf}
 }
 
-   
 @inproceedings{SSagayama201405ASA,
  author = {Sagayama, Shigeki and Nakamura, Tomohiko and Nakamura, Eita and Saito, Yasuyuki and Kameoka, Hirokazu, and Ono, Nobutaka},
- booktitle = {Proceedings of Meetings on Acoustics (POMA), Acoustic Society of America (ASA)},
+ booktitle = {Proceedings of Meetings on Acoustics, Acoustic Society of America},
  lang = {en},
- month = {May},
+ month = May,
  title = {Automatic Music Accompaniment Allowing Errors and Arbitrary Repeats and Jumps},
  volume = {21, 035003},
  year = {2014},
@@ -162,7 +178,7 @@
 
 @inproceedings{MNakano201110WASPAA,
  author = {Nakano, Masahiro and {Le Roux}, Jonathan and Kameoka, Hirokazu, and Nakamura, Tomohiko and Ono, Nobutaka and Sagayama, Shigeki},
- booktitle = {Proceedings of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)},
+ booktitle = {Proceedings of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics},
  lang = {en},
  month = Oct.,
  pages = {325--328},
@@ -177,5 +193,5 @@
   school       = {The University of Tokyo},
   year         = 2016,
   month        = 3,
-  note         = {Dean’s Award, Graduate School of Information Science and Technology, The University of Tokyo}
+  note         = {[Dean’s Award, Graduate School of Information Science and Technology, The University of Tokyo]}
 }
