--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -4,6 +4,7 @@
  lang = {en},
  title = {Harmonic-Temporal Factor Decomposition for Unsupervised Monaural Separation of Harmonic Sounds},
  year=2020,
+ url_Paper = {https://doi.org/10.1109/TASLP.2020.3037487},
  url_Demo = {demo/key_transposition/index.html}
 }
 
