--- a/docs/pdf/bib/publications.bib
+++ b/docs/pdf/bib/publications.bib
@@ -1,9 +1,13 @@
-@article{TNakamura2020IEEEACMTASLP_toappear,
+@article{TNakamura2020IEEEACMTASLP,
  author={Nakamura, Tomohiko and Kameoka, Hirokazu},
  journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
  lang = {en},
  title = {Harmonic-Temporal Factor Decomposition for Unsupervised Monaural Separation of Harmonic Sounds},
  year=2020,
+ volume={29},  
+ number={},  
+ pages={68--82},  
+ doi={10.1109/TASLP.2020.3037487},
  url_Paper = {https://doi.org/10.1109/TASLP.2020.3037487},
  url_Demo = {demo/key_transposition/index.html}
 }
